# Chess_detecting

./: .gitignore  ChessBoardDetecting.py  Line.py  LinesGroups.py  README.md  UsefulFunctions.py  lattice_points_canny_annot.csv  lattice_points_mix_annot.csv  lattice_points_train_annot.csv  lattice_points_train_my_annot.csv  lattice_points_train_points_annot.csv  lattice_points_train_points_annot_3.csv  main.py  pyproject.toml  requirements.txt
ChessNotation/: Resizing.py  main.py  main_interface.py
ChessNotation/BoardDetecting/: BoardGrid.py  ChessBoardDetecting.py  LatticeDetectFuncs.py  LatticePoints.py  Line.py  LinesGroups.py  UsefulFunctions.py
ChessNotation/ChessPiecesDetecting/: ChessNotation.py  ChessPiece.py  ChessPiecesDetecting.py
ChessNotation/Interface/: ChessMoveWidget.py  FENInfoWidget.py  ImagePresentationWidget.py  LoadDialog.py  LoaderWidget.py  MainWindow.py  UsefulFuncs.py  VideoThread.py
annotation/: lattice_points_annot.csv  lattice_points_rotate_1_annot.csv  lattice_points_rotate_2_annot.csv  lattice_points_rotate_3_annot.csv  lattice_points_rotate_4_annot.csv  lattice_points_rotate_5_annot.csv  lattice_points_rotate_annot.csv  lattice_points_test_annot.csv  lattice_points_train_points_annot_3.csv
board_detection/: ChessBoardDetecting.py  LatticeDetectFuncs.py  LatticePoints.py  Line.py  LinesGroups.py  Point.py  UsefulFunctions.py  main.py
lattice_points_ml/: ConvNet.py  LatticePointsDataset.py  main.py
lattice_points_ml/model/: lattice_detect_n_100.pt  lattice_detect_n_150.pt  model.pt  model_1 — копия.pt  model_2.pt  model_3.pt  (+2 more)
(+3 files in other folders)
