[tool.poetry]
name = "diplom"
version = "0.1.0"
description = ""
authors = ["iliakhar <kharchenko_ilia@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"
opencv-python = "^4.9.0.80"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

